force-app/main/default/objects/Nimbus_Device_Registration__c/Nimbus_Device_Registration__c.object-meta.xml
<CustomObject>
    <description>Nimbus Electronics device registrations for warranty tracking. Links a product serial number to a customer for warranty verification.</description>
    <label>Nimbus Device Registration</label>
    <nameField>
        <displayFormat>REG-{00000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nimbus Device Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>