force-app/main/default/objects/Nimbus_Device_Registration__c/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <description>Warranty coverage tier</description>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Standard</fullName><default>true</default><label>Standard</label></value>
            <value><fullName>Extended</fullName><default>false</default><label>Extended</label></value>
            <value><fullName>Premium</fullName><default>false</default><label>Premium</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>