force-app/main/default/objects/Nimbus_Device_Registration__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>Email of the customer who registered the device</description>
    <label>Customer Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>