force-app/main/default/objects/Nimbus_Device_Registration__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>Date the product was purchased</description>
    <label>Purchase Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>