force-app/main/default/objects/Nimbus_Device_Registration__c/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <description>Date the warranty expires</description>
    <label>Warranty End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>